--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>To-do List whith Js</title>
+  <title>To-do List whith JS</title>
+
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div id="app">
+    <h1>Lista de tarefas</h1>
     <ul>
     </ul>
-    <input type="text" placeholder="Digite um todo">
-    <button>Adicionar</button>
+    <div class="form">
+      <input type="text" placeholder="Digite uma tarefa">
+      <button title="Salvar tarefa">💾</button>
+    </div>
   </div>
 
   <script src="app.js"></script>
